--- a/APPCV_CSE/Web.config
+++ b/APPCV_CSE/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    	  <add name="DBJUNTASEntities" connectionString="metadata=res://*/Datos.Model1.csdl|res://*/Datos.Model1.ssdl|res://*/Datos.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=001-106-CTG-001\SQLEXPRESS;initial catalog=DBJUNTAS; User Id=@ppcsePE; Password=@ppcsePE; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    	  <!--<add name="DBJUNTASEntities" connectionString="metadata=res://*/Datos.Model1.csdl|res://*/Datos.Model1.ssdl|res://*/Datos.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=001-106-CTG-001\SQLEXPRESS;initial catalog=DBJUNTAS; User Id=@ppcsePE; Password=@ppcsePE; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+	  <add name="DBJUNTASEntities" connectionString="metadata=res://*/Datos.Model1.csdl|res://*/Datos.Model1.ssdl|res://*/Datos.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=DBJUNTAS; Trusted_Connection=True; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
      <add name="AuthEntities" connectionString="data source=001-106-CTG-001\SQLEXPRESS; initial catalog=DBJUNTAS; User Id=@ppcsePE; Password=@ppcsePE;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
