--- a/APPCV_CSE/APPCV_CSE.csproj
+++ b/APPCV_CSE/APPCV_CSE.csproj
@@ -254,10 +254,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Datos\PADRON.cs">
+    <Compile Include="Datos\TotalConsolidado_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Datos\TotalConsolidado_Result.cs">
+    <Compile Include="Datos\vwPADRON.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
